<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_desc"
            android:src="@drawable/ic_movie_poster" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/movie_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/movie_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_genres"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_release_date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/movie_overview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/button_watch_trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/watch_trailer"
            android:backgroundTint="@color/brown1"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
